Release 3.3.0
=============

New features
------------

- Trying to import an R package that it not installed will now raise an
  exception :class:`rpy2.robjects.packages.PackageNotInstalledError`.

- The R C API functions `void SET_FRAME(SEXP x, SEXP v)`,
  `void SET_ENCLOS(SEXP x, SEXP v)` and `void SET_HASHTAB(SEXP x, SEXP v)`
  are now accessible through rpy2.

Changes
-------

- When calling R C-API's `R_ParseVector` and a error occurs, the
  exception message now contains the parsing status.

Bugs fixed
-----------

- Building ABI only mode could require an API build environment (and fail
  with an error when not present).


Release 3.2.3
=============

Bugs fixed
-----------

- Error when parsing strings as R codes could result in a segfault. 


Release 3.2.2
=============

Bugs fixed
----------

- Python format error when trying to report that the system is not reported
  on Windows (issue #597).

- The setup script would error on build if R is not installed. It is now
  printing an error message.


Release 3.2.1
=============

Bugs fixed
----------

- The wrapper for the R package `dbplyr` could not import the underlying
  package (refactoring elsewhere was not propagated there).

- Creating R objects called `names` `globalenv` caused the method
  :meth:`Sexp.names` to fail (issue #587).

- Whenever the pandas conversion was activated :class:`FloatSexpVector` instances
  with the R class `POSIXct` attached where not corrected mapped back to pandas
  datetime arrays. (issue #594).

- Fix installation when an installation when a prefix without write access is used
  (issue #588).


Release 3.2.0
=============

New features
------------

- rpy2 can built and used with :mod:`cffi`'s ABI or API modes (releases 3.0.x and
  3.1.x were using the ABI mode exclusively). At the time of writing the default
  is still the ABI mode but the choice can be controlled through the environment variable